# image_framework

./: .gitignore  962.diff:Zone.Identifier  BUILD.gn  OAT.xml  README.md  README_zh.md  bundle.json  cfi_blocklist.txt  hisysevent.def  hisysevent.yaml  ohos.build
adapter/frameworks/bitmapconverter/java/: BUILD.gn
adapter/frameworks/bitmapconverter/java/test/: BUILD.gn
adapter/frameworks/bitmapconverter/native/: BUILD.gn
adapter/frameworks/bitmapconverter/native/include/: bitmap_wrapper.h  image_bitmap_converter.h
adapter/frameworks/bitmapconverter/native/src/: bitmap_wrapper.cpp  image_bitmap_converter.cpp  image_native_interface_utils.cpp  ohos_image_ImageDoubleFwConverter.cpp
adapter/frameworks/exif/: BUILD.gn
adapter/frameworks/receiver/: BUILD.gn
adapter/frameworks/receiver/include/base/: image_receiver_adapter.h  image_receiver_utils.h
adapter/frameworks/receiver/include/private/: image_receiver_private.h
adapter/frameworks/receiver/src/: image_receiver_adapter.cpp  image_receiver_utils.cpp
adapter/hals/jpegdec/: BUILD.gn
frameworks/innerkitsimpl/test/fuzztest/heifimpl_fuzzer/: BUILD.gn
frameworks/innerkitsimpl/test/fuzztest/heifimpl_fuzzer/include/: heifimpl_fuzzer.h
frameworks/innerkitsimpl/test/fuzztest/heifimpl_fuzzer/src/: heifimpl_fuzzer.cpp
frameworks/innerkitsimpl/test/fuzztest/imageframework_fuzzer/: BUILD.gn
frameworks/innerkitsimpl/test/fuzztest/imageframework_fuzzer/include/: imageframework_fuzzer.h
frameworks/innerkitsimpl/test/fuzztest/imageframework_fuzzer/src/: imageframework_fuzzer.cpp
frameworks/innerkitsimpl/utils/: BUILD.gn
frameworks/innerkitsimpl/utils/include/: image_convert_tools.h  image_converter.h  image_data_statistics.h  image_dfx.h  image_format.h  image_fwk_ext_manager.h  image_holder_manager.h  image_log.h  image_system_properties.h  image_trace.h  image_type_converter.h  image_utils.h  libyuv_pixel_map_utils.h  pixel_yuv_ext_utils.h  pixel_yuv_utils.h  single_instance.h  vpe_utils.h
frameworks/innerkitsimpl/utils/src/: image_convert_tools.cpp  image_data_statistics.cpp  image_dfx.cpp  image_fwk_ext_manager.cpp  image_system_properties.cpp  image_trace.cpp  image_type_converter.cpp  image_utils.cpp  libyuv_pixel_map_utils.cpp  pixel_yuv_ext_utils.cpp  pixel_yuv_utils.cpp  vpe_utils.cpp
frameworks/jni/imagesource/: BUILD.gn
frameworks/jni/imagesource/include/: jni_decode_event_listener.h
frameworks/jni/imagesource/src/: jni_decode_event_listener.cpp  ohos_image_ImageSource.cpp
frameworks/jni/incrementalpixelmap/: BUILD.gn
frameworks/jni/incrementalpixelmap/src/: ohos_image_IncrementalPixelmap.cpp
frameworks/jni/pixelmap/: BUILD.gn
frameworks/jni/pixelmap/include/: ohos_image_pixelmap.h
frameworks/jni/pixelmap/src/: ohos_image_pixelmap.cpp
frameworks/kits/js/common/picture_ndk/: BUILD.gn  image_common.cpp  image_common_impl.cpp  picture_native.cpp  picture_native_impl.cpp
frameworks/kits/js/common/picture_ndk/include/: picture_native_impl.h
ide/: BUILD.gn  image_decode_config.gni
interfaces/innerkits/: BUILD.gn  libimage_native.versionscript
interfaces/innerkits/astc/: BUILD.gn  astc_utils.h
interfaces/innerkits/include/: auxiliary_generator.h  auxiliary_picture.h  buffer_image_stream.h  data_buf.h  data_buf_error.hpp  data_buf_slice.h  data_buf_slice.hpp  decode_listener.h  exif_meta_data.h  exif_meta_data_validate.h  exif_metadata.h  file_image_stream.h  fragment_metadata.h  image_format_convert.h  image_mime_type.h  image_native_interface_utils.h  image_packer.h  image_source.h  image_stream.h  image_type.h  image_type.h.rej  incremental_pixel_map.h  libyuv_pixel_map.h  log_tags.h  media_errors.h  metadata.h  modules.h  native_image.h  nine_chunk_reader.h  peer_listener.h  picture.h  pixel_astc.h  pixel_map.h  pixel_map_manager.h  pixel_map_parcel.h  pixel_yuv.h  pixel_yuv_ext.h  purgeable_pixel_map.h  purgeable_pixel_map_builder.h  tiff_parser.h
interfaces/kits/java/: BUILD.gn
interfaces/kits/java/test/: BUILD.gn
plugins/common/libs/: BUILD.gn
plugins/common/libs/image/common/: BUILD.gn  cfi_blocklist.txt
plugins/common/libs/image/common/exifhelper/: exif_info.cpp
plugins/common/libs/image/formatagentplugin/: BUILD.gn
plugins/common/libs/image/formatagentplugin/include/: png_format_agent.h  svg_format_agent.h  webp_format_agent.h
plugins/common/libs/image/formatagentplugin/src/: heif_format_agent.cpp  plugin_export.cpp  png_format_agent.cpp  svg_format_agent.cpp  wbmp_format_agent.cpp  webp_format_agent.cpp
plugins/common/libs/image/libbmpplugin/: BUILD.gn
plugins/common/libs/image/libbmpplugin/include/: bmp_decoder.h  bmp_stream.h
plugins/common/libs/image/libbmpplugin/src/: bmp_decoder.cpp  plugin_export.cpp
plugins/common/libs/image/libextplugin/: BUILD.gn  cfi_blocklist.txt  extplugin.pluginmeta
plugins/common/libs/image/libextplugin/include/: ext_decoder.h  ext_encoder.h  ext_pixel_convert.h  ext_stream.h  ext_wstream.h
plugins/common/libs/image/libextplugin/src/: ext_decoder.cpp  ext_encoder.cpp  ext_pixel_convert.cpp  ext_stream.cpp  ext_wstream.cpp  plugin_export.cpp
plugins/common/libs/image/libgifplugin/: BUILD.gn
plugins/common/libs/image/libgifplugin/include/: gif_decoder.h  gif_encoder.h
plugins/common/libs/image/libgifplugin/src/: gif_decoder.cpp  gif_encoder.cpp  plugin_export.cpp
plugins/common/libs/image/libheifplugin/: BUILD.gn  BUILD.gn_old  heifplugin.pluginmeta
plugins/common/libs/image/libheifplugin/include/: heif_decoder.h  heif_encoder.h
plugins/common/libs/image/libheifplugin/src/: heif_decoder.cpp  heif_decoder_wrapper.cpp  heif_encoder.cpp  (+1 more)
plugins/common/libs/image/libjpegplugin/: BUILD.gn  BUILD.gn_old  cfi_blocklist.txt
plugins/common/libs/image/libpngplugin/: BUILD.gn  libpngplugin.versionscript
plugins/common/libs/image/librawplugin/: BUILD.gn
plugins/common/libs/image/libsvgplugin/: BUILD.gn  svgplugin.pluginmeta
plugins/common/libs/image/libwebpplugin/: .BUILD.gn.swp  BUILD.gn  webpplugin.pluginmeta
plugins/cross/: image_native_android.gni  image_native_ios.gni  image_plugin_preview.gni
(+663 files in other folders)
